Backend blocks update profile for SSO users
